# Final_HW

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  main.html
docs/_build/html/_modules/fastapi/security/: oauth2.html
docs/_build/html/_modules/passlib/: context.html
docs/_build/html/_modules/src/conf/: config.html
docs/_build/html/_modules/src/repository/: contacts.html  users.html
docs/_build/html/_modules/src/routes/: auth.html  contacts.html  users.html
docs/_build/html/_modules/src/services/: auth.html  cloudinary.html  email.html
migration/: env.py
migration/versions/: 5e451a96d80f_add_contacts_relationship_to_user.py  6ad421216b71_dd_contacts_relationship_to_ser.py  c5e1c3b7428a_.py  f5676eb0a02e_add_verify_for_user.py
migration/versions/__pycache__/: 5e451a96d80f_add_contacts_relationship_to_user.cpython-312.pyc.1199424852848
source/: conf.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/entity/__pycache__/: models.cpython-312.pyc.2056714014896
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  cloudinary.py  email.py
src/services/templates/: verify_email.html
tests/: conftest.py  test_e2e_routes_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
