[project]
name = "hw-web-11"
version = "0.1.0"
description = ""
authors = [
    {name = "Yevhenii Bessonov",email = "norent777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-decouple (>=3.8,<4.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn[standart] (>=0.34.3,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
